# Home_work_projecy_3_1

./: .env.sample  .gitignore  Dockerfile  README.md  catalog.html  category_1.html  contacts.html  datadump.json  docker-compose.yaml  main_page.html  my_app_fixture.json  pyproject.toml  requirements.txt
HTML/: catalog.html  category_1.html  contacts.html  main_page.html
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py
my_app/: admin.py  forms.py  groups.json  models.py  services.py  urls.py  views.py
my_app/management/commands/: add_products.py
my_app/migrations/: 0001_initial.py  0002_alter_product_options.py  0002_alter_product_price.py  0003_product_is_published_product_owner.py
my_app/templates/: product_detail.html
my_app/templates/my_app/: base.html  catalog.html  categories_list.html  contacts.html  create_product.html  header.html  main_page.html  product_delete.html  product_detail.html  product_unpublish.html  products_by_category.html
my_app/templatetags/: my_tags.py
nginx/: nginx.conf
src/: server.py
users/: admin.py  forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_avatar_and_more.py
users/templates/: login.html
users/templates/users/: user_form.html
