[tool.poetry]
name = "home-work-project-3"
version = "0.1.0"
description = ""
authors = ["Adm <anton.chubshev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "11.1.0"
psycopg2-binary = "2.9.10"
django = "4.2.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
